kubernetes/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: hello
      tier: backend
      track: stable
  replicas: 3
  template:
    metadata:
      labels:
        app: hello
        tier: backend
        track: stable
    spec:
      containers:
        - name: hello
          image: "ghcr.io/joshradin/mass-tic-tac-toe"
          command:
            - hello
          ports:
            - name: http
              containerPort: 80
