kubernetes/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: hello
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        tier: frontend
        track: stable
    spec:
      containers:
        - name: nginx
          image: jradin37/tic-tac-toe-nginx
          imagePullPolicy: Never
          lifecycle:
            preStop:
              exec:
                command: [ "/usr/sbin/nginx","-s","quit" ]
