kubernetes/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: hello
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
