kubernetes/hello-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello
    tier: backend
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
